# OTPClient

./: CMakeLists.txt  README.md  meson.build  meson_options.txt
data/: com.github.paolostivanin.OTPClient.appdata.xml
src/: app.c  data.h  qrcode-parser.c
src/ui/: otpclient.ui
